--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <background class="hero"></background>
+    <div class="hero"></div>
     <section class="content">
         <section class="subtopic">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization brainstorming workspace" class="float-left" />
