--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="hero"></main>
     <section class="content">
-        <section class="subtopic">
+        <section id="search-engine-optimization" class="subtopic">
             <img src="Develop/images/search-engine-optimization.jpg" alt="search engine optimization brainstorming workspace" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel,
@@ -34,7 +34,7 @@
               visibility and find the right customers for your business.
               </p>
             </section>
-        <section class="subtopic">
+        <section id="online-reputation-management" class="subtopic">
             <img src="Develop/images/online-reputation-management.jpg" alt="online reputation management assessment" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an 
@@ -42,7 +42,7 @@
                the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="subtopic">
+        <section id="social-media-marketing" class="subtopic">
             <img src="Develop/images/social-media-marketing.jpg" alt="social media marketing meeting" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps 
